# PiServer

./: .env  .gitignore  Consideraciones.md  Funciones.md  cert.pem  key.pem
client/: Cargo.toml
client/src/: main.rs
server/: .env  Cargo.toml  esquema.sql
server/src/: autenticable.rs  certificados.rs  credenciales.rs  gestion_cliente.rs  gestor_usuarios.rs  main.rs
